--- a/css/perfil.css
+++ b/css/perfil.css
@@ -15,11 +15,11 @@
 
 body {
     background-color: var(--color-primary);
-    overflow-y: hidden;
 }
 
 header {
     width: 100%;
+    min-height: 145px;
     height: 35vh;
     background-color: #212121;
     display: flex;
@@ -43,12 +43,15 @@ header {
 
 
 .perfil {
-    width: 10rem;
-    height: 10rem;
-    background-color: var(--color-primary);
+    min-width: 90px;
+    width: 20vh;
+    min-height: 90px;
+    height: 20vh;
     border-radius: 10rem;
-    top: 30%;
+    top: 4%;
+    background-color: var(--color-primary);
     position: absolute;
+
 }
 
 .perfil img {
@@ -62,10 +65,12 @@ header {
     color: white;
     font-family: var(--font-primary);
     font-weight: 400;
+    font-size: 2rem;
 }
 
 .descricao {
     width: 100%;
+    min-height: 200px;
     height: 50vh;
     position: relative;
 
@@ -78,16 +83,13 @@ header {
     border-radius: 20px;
     padding: .5rem;
     width: 50%;
-    height: 340px;
-    max-width: 50%;
-    max-height: 340px;
-    min-width: 50%;
-    min-height: 340px;
+    height: 30vh;
     background-color: #DCDCDC;
 }
 
 .solicitar-job {
     width: 100%;
+    min-height: 61px;
     height: 15vh;
     position: relative;
     display: flex;
@@ -105,5 +107,5 @@ header {
     cursor: pointer;
     font-family: var(--font-primary);
     background-color: rgba(0, 74.0000031888485, 173.00000488758087, 1);
-    
+
 }
