Meu Perfil atualizado

--- a/css/meuPerfil.css
+++ b/css/meuPerfil.css
@@ -133,6 +133,12 @@ header {
     opacity: 0.5;
 }
 
+.container { 
+    width: 700px; 
+    margin-left: auto;
+    margin-right: auto; 
+}
+
 
 .perfil {
     min-width: 90px;
@@ -147,11 +153,10 @@ header {
 }
 
 .perfil img {
-    background-color: #ddd;
-    border-radius: 50%;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    width: 200px;
+    
 }
 
 .perfil h1 {
@@ -162,25 +167,11 @@ header {
     font-size: 2rem;
 }
 
-.perfil h2 {
-    text-align: center;
-    color: #fff;
-    font-family: var(--font-primary);
-    font-weight: 350;
-    font-size: 1.5rem;
-}
-
 .descricao {
     width: 100%;
     min-height: 200px;
     height: 50vh;
     position: relative;
-}
-
-.descricao h1{
-    position: absolute;
-    left: 25%;
-    font-family: var(--font-primary);
 }
 
 .descricao textarea {
@@ -216,10 +207,7 @@ header {
     background-color: rgba(0, 74.0000031888485, 173.00000488758087, 1);
 
 }
-.editar-perfil a {
-    width: auto;
-    position: absolute;
-    left: 100px;
+.solicitar-job a {
     top: 10%;
     color: white;
     letter-spacing: .05rem;
