--- a/css/perfil.css
+++ b/css/perfil.css
@@ -1,16 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css");
 
 * {
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
-
 }
 
 :root {
     --font-primary: "Inter", serif;
     --color-primary: rgba(183.00000429153442, 207.00000286102295, 255, 1);
+    --color-secundary: rgba(0, 74.0000031888485, 173.00000488758087, 1);
+}
+
+body {
+    background-color: var(--color-primary);
 }
 
 .hamburguer {
@@ -105,14 +110,13 @@
     color: var(--color-primary);
 }
 
-body {
-    background-color: var(--color-primary);
-}
 
-header {
+
+.sessao-header {
     width: 100%;
-    min-height: 190px;
     height: 35vh;
+    min-width: 430px;
+    min-height: 190px;
     background-color: #212121;
     display: flex;
     justify-content: center;
@@ -134,33 +138,39 @@ header {
 }
 
 
-.perfil {
-    min-width: 90px;
-    width: 20vh;
-    min-height: 90px;
-    height: 20vh;
-    border-radius: 100rem;
+.foto-perfil {
     top: 4%;
+    width: 20vh;
+    height: 20vh;
+    min-width: 90px;
+    min-height: 90px;
+    border-radius: 100rem;
     background-color: var(--color-primary);
     position: absolute;
-
 }
 
-.perfil img {
+
+.foto-perfil img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 100rem;
 }
 
-.perfil h1 {
+.dados-perfil {
+    position: absolute;
+    padding-top: 22vh;
+}
+
+.dados-perfil h1 {
     text-align: center;
     color: white;
     font-family: var(--font-primary);
     font-weight: 400;
     font-size: 2rem;
 }
-.perfil h2 {
+
+.dados-perfil h2 {
     text-align: center;
     color: #fff;
     font-family: var(--font-primary);
@@ -184,6 +194,7 @@ header {
     width: 50%;
     height: 30vh;
     background-color: #DCDCDC;
+
 }
 
 .solicitar-job {
@@ -205,6 +216,99 @@ header {
     padding: 1rem 1.5rem;
     cursor: pointer;
     font-family: var(--font-primary);
-    background-color: rgba(0, 74.0000031888485, 173.00000488758087, 1);
+    background-color: var(--color-secundary);
+    text-transform: capitalize;
+}
 
+.meuModal {
+    font-family: var(--font-primary);
+    text-align: center;
+}
+
+.meuModal h1 {
+    margin-bottom: 1rem;
+}
+
+.meuModal button {
+    padding: 0.6rem 1.2rem;
+    background-color: #888;
+    color: #fff;
+    border: none;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    opacity: 0.9;
+    font-size: 1rem;
+}
+
+#open-modal {
+    background-color: #007bff;
+}
+
+.meuModal button:hover {
+    opacity: 1;
+}
+
+#fade {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 5;
+}
+
+#modal {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    max-width: 90%;
+    background-color: #fff;
+    padding: 1.2rem;
+    border-radius: 0.5rem;
+    z-index: 10;
+}
+
+#fade,
+#modal {
+    transition: 0.5s;
+    opacity: 1;
+    pointer-events: all;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+
+}
+
+.modal-body p {
+    margin-bottom: 1rem;
+}
+
+.modal-body a {
+    font-size: 2em;
+}
+
+.modal-body p a {}
+
+.modal-body i {
+    text-align: center;
+    color: #25D366;
+}
+
+#modal.hide,
+#fade.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+
+#modal.hide {
+    top: 0;
 }
