--- a/css/EditarPerfil.css
+++ b/css/EditarPerfil.css
@@ -9,6 +9,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+input[type=file]{
+    display: none;
+}
 #main-container img{
     display: block;
     margin-left: auto;
@@ -22,12 +25,19 @@
     color: rgb(241, 14, 14);
   text-decoration: underline;
 }
+
 #main-container h3:hover{
 color: blue;
 }
-.editarImagem {
-height: 1.5rem;
+
+#imgPhoto{
+    height: 1.5rem;
 margin-top: 12px;
+    cursor: pointer;
+    transition: background .3s;
+}
+#imgPhoto:hover{
+    background-color: grey;
 }
 
 .editarLabel {
@@ -97,7 +107,7 @@ form{
     border-left: 2px solid #323232;
     border-right: 2px solid #323232;
 }
-.hal-box{
+.half-box{
     flex: 1 1 45%;
     position: relative;
 }
@@ -116,7 +126,8 @@ input{
 }
 input:focus{
     border-color: blue;
-} 
+}
+
 input.deletar{
     border-bottom: none;
     background-color: rgb(224, 31, 31);
@@ -145,6 +156,7 @@ input.atualizar{
     margin-left: auto;
     margin-right: auto;
 }
+
 input[type="submit"]{
     color: #FFF;
     cursor: pointer;
