--- a/css/EditarPerfil.css
+++ b/css/EditarPerfil.css
@@ -30,6 +30,15 @@ input[type=file]{
 color: blue;
 }
 
+#photo{
+    height: 1.5rem;
+margin-top: 12px;
+    cursor: pointer;
+    transition: background .3s;
+}
+#photo:hover{
+    background-color: grey;
+}
 #imgPhoto{
     height: 1.5rem;
 margin-top: 12px;
@@ -39,6 +48,7 @@ margin-top: 12px;
 #imgPhoto:hover{
     background-color: grey;
 }
+
 
 .editarLabel {
     color: rgb(13, 13, 14);
@@ -75,7 +85,13 @@ body{
     background-image: url("../img/fundo.jpg");
     background-size: cover; 
 }
-
+ p{
+    margin-left: 400px;
+    margin-top: 5px;
+}
+p:hover{
+background-color: grey;
+}
 #main-container{
     width: 500px;
     margin-left: auto;
@@ -87,9 +103,11 @@ body{
 .full-box img{
     text-align: center;
 }
+
 #main-container h1{
     text-align: center;
-    margin-bottom: 25px;
+    margin-bottom: 0px;
+    margin-top: -5px;
     font-size: 1.6rem;
 }
 form{
@@ -142,6 +160,20 @@ input.deletar{
     margin-left: auto;
     margin-right: auto;
 }  
+input.editar{
+    border-bottom: none;
+    background-color: rgba(0, 74.0000031888485, 173.00000488758087, 1);
+    width: 343px;
+    height: 51px;
+    margin-top: -30px;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 input.atualizar{
     border-bottom: none;
     background-color: rgba(0, 74.0000031888485, 173.00000488758087, 1);
